# troy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent_audit/: __init__.py  cli.py
agent_audit/adapters/: crewai.py  langchain.py  openai_agents.py
agent_audit/explainers/: base.py  llm.py
agent_audit/graph/: builder.py
agent_audit/guard/: __init__.py  core.py  decision.py
agent_audit/ingestion/: loader.py
agent_audit/policies/: data_protection.json  hipaa.json  minimal.json
agent_audit/policy/: engine.py
agent_audit/replay/: viewer.py
agent_audit/reporting/: reporter.py
examples/: demo_adapters.py  demo_guard.py  policy.json  trace.json  trace2.json  trace3.json  trace4.json  trace5.json  trace6.json  trace7.json  trace8.json  trace9.json
tests/: test_adapters.py  test_cli_check.py  test_cli_policies.py  test_guard.py  test_guard_integration.py  test_policies.py  test_policy_engine.py
troy/: __init__.py  cli.py  models.py
troy/adapters/: crewai.py  langchain.py  openai_agents.py
troy/explainers/: base.py  llm.py
troy/graph/: builder.py
troy/guard/: __init__.py  core.py  decision.py
troy/ingestion/: loader.py
troy/policies/: agent_safety.json  owasp_llm_top10.json  safe_browsing.json  soc2.json
troy/policy/: engine.py
troy/replay/: viewer.py
troy/reporting/: reporter.py
