[project]
name = "agent-audit"
version = "0.1.0"
description = "CLI tool that audits agent execution traces against policies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "networkx>=3.0",
    "click>=8.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
agent-audit = "agent_audit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
